tests/syntax_errors/test32_2.tl
-- test case 29.
-- Description : syntax error

-- Expected : '2'
require "ifj21" 
 function 123name () end 
